--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </nav>
       <nav class="airpods-navbar">
         <div class="nav-content">
-          <div class="nav-logo"><a href="#">Personalized Music </a></div>
+          <div class="nav-logo"><a href="#">Uic-Music-Space</a></div>
           <ul class="nav-items">
             <li><button class="buy-btn">【7450小组1】</button></li>
             <li><button >熊强</button></li>
