--- a/one-music-gh-pages/elements.html
+++ b/one-music-gh-pages/elements.html
@@ -1271,4 +1271,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <script src="js/autoplay.js"></script>
 </body>
 
+<script>
+    window.onload =function(){
+        document.getElementById("loginBtn").innerHTML = localStorage.getItem('UserLoginNameText')
+    }
+</script>
+
 </html>
