--- a/one-music-gh-pages/event.html
+++ b/one-music-gh-pages/event.html
@@ -459,4 +459,9 @@
 <script src="js/autoplay.js"></script>
 </body>
 
+<script>
+  window.onload =function(){
+        document.getElementById("loginBtn").innerHTML = localStorage.getItem('UserLoginNameText')
+    }
+</script>
 </html>
