--- a/one-music-gh-pages/index1.html
+++ b/one-music-gh-pages/index1.html
@@ -49,7 +49,7 @@
         <nav class="classy-navbar justify-content-between" id="oneMusicNav">
 
           <!-- Nav brand -->
-          <a href="../index.html" class="nav-brand"><img src="img/core-img/logo.png" alt=""></a>
+          <a href="../index.html" class="nav-brand"><img src="img/core-img/logo.svg" alt="" style="width:100px"></a>
 
           <!-- Navbar Toggler -->
           <div class="classy-navbar-toggler">
@@ -72,7 +72,7 @@
                   <nav class="classy-navbar justify-content-between" id="oneMusicNav1">
 
                     <!-- Nav brand -->
-                    <a href="../index.html" class="nav-brand"><img src="img/core-img/logo.png" alt=""></a>
+                    <!-- <a href="../index.html" class="nav-brand"><img src="img/core-img/logo.svg" alt=""></a> -->
 
                     <!-- Navbar Toggler -->
                     <div class="classy-navbar-toggler">
@@ -129,7 +129,7 @@
                         <div class="login-register-cart-button d-flex align-items-center">
                           <!-- Login/Register -->
                           <div class="login-register-btn mr-50">
-                            <a href="login.html" id="loginBtn">xiongqiang@qq.com</a>
+                            <a href="login.html" id="loginBtn">Login</a>
                           </div>
 
                           <!-- Cart Button -->
@@ -209,19 +209,14 @@
       <div class="col-12">
         <div class="section-heading style-2">
           <p>Introducing</p>
-          <h2>About UIC</h2>
+          <h2>关于阿那亚</h2>
         </div>
       </div>
     </div>
     <div class="row justify-content-center">
       <div class="col-12 col-lg-9">
         <div class="ablums-text text-center mb-70">
-          <p>In a groundbreaking full-scale collaboration in higher education between the Chinese mainland and Hong
-             Kong, Beijing Normal University-Hong Kong Baptist University United International College (UIC) was
-             established in 2005. Situated in Zhuhai City within the thriving Guangdong-Hong Kong-Macao Greater Bay
-             Area, UIC stands as the first modern college in the Chinese mainland to champion a liberal arts education.
-             UIC is committed to enriching the higher education landscape and fostering students who possess
-             professional acumen, whole-person development, a deep understanding of China and a global outlook.</p>
+          <p>阿那亚是一个生活方式品牌，在北戴河新区、金山岭、雾灵山、崇礼、广州九龙湖、三亚等自然景观优美、人文积淀深厚的地方，持续打造以文化艺术为核心、承载多元生活方式的先锋社区，探寻美好人生何以可能。</p>
         </div>
       </div>
     </div>
@@ -234,9 +229,9 @@
             <img src="img/bg-img/a1.jpg" alt="">
             <div class="album-info">
               <a href="#">
-                <h5>The Cure</h5>
+                <h5 style="font-family: Helvetica;">The Cure</h5>
               </a>
-              <p>Second Song</p>
+              <p style="font-family: Helvetica;">Second Song</p>
             </div>
           </div>
 
@@ -245,9 +240,9 @@
             <img src="img/bg-img/a2.jpg" alt="">
             <div class="album-info">
               <a href="#">
-                <h5>Sam Smith</h5>
+                <h5 style="font-family: Helvetica;">Sam Smith</h5>
               </a>
-              <p>Underground</p>
+              <p style="font-family: Helvetica;">Underground</p>
             </div>
           </div>
 
@@ -256,9 +251,9 @@
             <img src="img/bg-img/a3.jpg" alt="">
             <div class="album-info">
               <a href="#">
-                <h5>Will I am</h5>
+                <h5 style="font-family: Helvetica;">Will I am</h5>
               </a>
-              <p>First</p>
+              <p style="font-family: Helvetica;">First</p>
             </div>
           </div>
 
@@ -267,9 +262,9 @@
             <img src="img/bg-img/a4.jpg" alt="">
             <div class="album-info">
               <a href="#">
-                <h5>The Cure</h5>
+                <h5 style="font-family: Helvetica;">The Cure</h5>
               </a>
-              <p>Second Song</p>
+              <p style="font-family: Helvetica;">Second Song</p>
             </div>
           </div>
 
@@ -278,31 +273,31 @@
             <img src="img/bg-img/a5.jpg" alt="">
             <div class="album-info">
               <a href="#">
-                <h5>DJ SMITH</h5>
+                <h5 style="font-family: Helvetica;">DJ SMITH</h5>
               </a>
-              <p>The Album</p>
+              <p style="font-family: Helvetica;">The Album</p>
             </div>
           </div>
 
           <!-- Single Album -->
           <div class="single-album">
-            <img src="img/bg-img/a6.jpg" alt="">
+            <img src="img/bg-img/a1.jpg" alt="">
             <div class="album-info">
               <a href="#">
-                <h5>The Ustopable</h5>
+                <h5 style="font-family: Helvetica;">The Ustopable</h5>
               </a>
-              <p>Unplugged</p>
+              <p style="font-family: Helvetica;">Unplugged</p>
             </div>
           </div>
 
           <!-- Single Album -->
           <div class="single-album">
-            <img src="img/bg-img/a7.jpg" alt="">
+            <img src="img/bg-img/a2.jpg" alt="">
             <div class="album-info">
               <a href="#">
-                <h5>Beyonce</h5>
+                <h5 style="font-family: Helvetica;">Beyonce</h5>
               </a>
-              <p>Songs</p>
+              <p style="font-family: Helvetica;">Songs</p>
             </div>
           </div>
         </div>
@@ -318,8 +313,8 @@
     <div class="row">
       <div class="col-12">
         <div class="section-heading style-2">
-          <p>See what’s new</p>
-          <h2>Buy What’s New</h2>
+          <!-- <p>See what’s new</p> -->
+          <h2>阿那亚戏剧节</h2>
         </div>
       </div>
     </div>
@@ -329,13 +324,13 @@
       <div class="col-12 col-sm-6 col-md-4 col-lg-2">
         <div class="single-album-area wow fadeInUp" data-wow-delay="400ms">
           <div class="album-thumb">
-            <img src="img/bg-img/b4.jpg" alt="" data-toggle="modal" data-target="#modalNoises">
+            <img src="img/bg-img/b6.jpg" alt="" data-toggle="modal" data-target="#modalNoises">
           </div>
           <div class="album-info">
             <a href="#">
-              <h5>Noises</h5>
+              <h5>06精彩集锦</h5>
             </a>
-            <p>Buble Gum</p>
+            <p>Highlights</p>
           </div>
         </div>
       </div>
@@ -346,9 +341,9 @@
           <div class="album-thumb">
             <img src="img/bg-img/b1.jpg" alt="" data-toggle="modal" data-target="#modalGarageBand">
             <!-- 专辑价格 -->
-            <div class="album-price">
+            <!-- <div class="album-price">
               <p>$0.90</p>
-            </div>
+            </div> -->
             <!-- 播放图标 -->
             <div class="play-icon">
               <a href="#" class="video--play--btn"><span class="icon-play-button"></span></a>
@@ -356,9 +351,9 @@
           </div>
           <div class="album-info">
             <a href="#">
-              <h5>Garage Band</h5>
+              <h5>01 公共跨界</h5>
             </a>
-            <p>Radio Station</p>
+            <p>Public & crossover arts</p>
           </div>
         </div>
       </div>
@@ -371,9 +366,9 @@
           </div>
           <div class="album-info">
             <a href="#">
-              <h5>Jazz Vibes</h5>
+              <h5>02 候鸟300</h5>
             </a>
-            <p>Smooth Jazz</p>
+            <p>Migratory birds 300</p>
           </div>
         </div>
       </div>
@@ -386,9 +381,9 @@
           </div>
           <div class="album-info">
             <a href="#">
-              <h5>Classical Symphony</h5>
+              <h5>03 特邀剧目</h5>
             </a>
-            <p>Orchestra</p>
+            <p>Special invited plays</p>
           </div>
         </div>
       </div>
@@ -479,7 +474,7 @@
         <div class="modal-dialog modal-lg" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="modalClassicalSymphonyLabel">Classical Symphony</h5>
+              <h5 class="modal-title" id="modalClassicalSymphonyLabel">04 特别活动</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
@@ -509,9 +504,9 @@
           </div>
           <div class="album-info">
             <a href="#">
-              <h5>Noises</h5>
+              <h5>04 特别活动</h5>
             </a>
-            <p>Buble Gum</p>
+            <p>Special activities</p>
           </div>
         </div>
       </div>
@@ -520,7 +515,7 @@
       <div class="col-12 col-sm-6 col-md-4 col-lg-2">
         <div class="single-album-area wow fadeInUp" data-wow-delay="500ms">
           <div class="album-thumb">
-            <img src="img/bg-img/b1.jpg" alt="" data-toggle="modal" data-target="#modalGarageBand">
+            <img src="img/bg-img/b5.jpg" alt="" data-toggle="modal" data-target="#modalGarageBand">
             <!-- 专辑价格 -->
             <div class="album-price">
               <p>$0.90</p>
@@ -532,9 +527,9 @@
           </div>
           <div class="album-info">
             <a href="#">
-              <h5>Garage Band</h5>
+              <h5>05 回顾视频</h5>
             </a>
-            <p>Radio Station</p>
+            <p>Review video</p>
           </div>
         </div>
       </div>
@@ -566,16 +561,15 @@
         <div class="featured-artist-content">
           <!-- Section Heading -->
           <div class="section-heading white text-left mb-30">
-            <p>See what’s new</p>
-            <h2>Buy What’s New</h2>
+            <p>ACT1.</p>
+            <h2>常规生活在“楚门”RULE</h2>
           </div>
-          <p>Nam tristique ex vel magna tincidunt, ut porta nisl finibus. Vivamus eu dolor eu quam varius rutrum. Fusce
-             nec justo id sem aliquam fringilla nec non lacus. Suspendisse eget lobortis nisi, ac cursus odio. Vivamus
-             nibh velit, rutrum at ipsum ac, dignissim iaculis ante. Donec in velit non elit pulvinar pellentesque et
-             non eros.</p>
+          <p>常规”是既定的范式，是习以为常的行为，它隐含着对同一化秩序的推崇，也让生活弥漫着普遍的厌倦。
+            如同一次行为艺术的试炼，2024年阿那亚戏剧节概念短片《常规和例外》通过一个方框将“常规”与“例外〞的界限视觉化的呈现，演员们通过行为艺术表演、像做心理游戏一样以肢体来探索被日常之物围成的界限，跨越界限，抑或通过改变自己的视⻆看到界限外的无限世界，进而探讨两者之间的关系。
+            </p>
           <div class="song-play-area">
             <div class="song-name">
-              <p>01. Main Hit Song</p>
+              <p>“常规”RULE</p>
             </div>
             <audio preload="auto" controls>
               <source src="audio/we_are_the_world.mp3">
@@ -596,8 +590,8 @@
       <div class="col-12 col-lg-4">
         <div class="weeks-top-area mb-100">
           <div class="section-heading text-left mb-50 wow fadeInUp" data-wow-delay="50ms">
-            <p>See what’s new</p>
-            <h2>This week’s top</h2>
+            <p>特邀剧目</p>
+            <h2>国际剧目</h2>
           </div>
 
           <!-- Single Top Item -->
@@ -606,8 +600,8 @@
               <img src="img/bg-img/wt1.jpg" alt="">
             </div>
             <div class="content-">
-              <h6>Sam Smith</h6>
-              <p>Underground</p>
+              <h6>国王之谜</h6>
+              <p>Re Chicchinella</p>
             </div>
           </div>
 
@@ -617,8 +611,8 @@
               <img src="img/bg-img/wt2.jpg" alt="">
             </div>
             <div class="content-">
-              <h6>Power Play</h6>
-              <p>In my mind</p>
+              <h6>她他们</h6>
+              <p>Them</p>
             </div>
           </div>
 
@@ -628,8 +622,8 @@
               <img src="img/bg-img/wt3.jpg" alt="">
             </div>
             <div class="content-">
-              <h6>Cristinne Smith</h6>
-              <p>My Music</p>
+              <h6>孤岛</h6>
+              <p>Les Autres（The Others）</p>
             </div>
           </div>
 
@@ -639,8 +633,8 @@
               <img src="img/bg-img/wt4.jpg" alt="">
             </div>
             <div class="content-">
-              <h6>The Music Band</h6>
-              <p>Underground</p>
+              <h6>魔音</h6>
+              <p>UNA BANDA SONORA</p>
             </div>
           </div>
 
@@ -650,8 +644,8 @@
               <img src="img/bg-img/wt5.jpg" alt="">
             </div>
             <div class="content-">
-              <h6>Creative Lyrics</h6>
-              <p>Songs and stuff</p>
+              <h6>世界头世界尾</h6>
+              <p>The world begins and ends</p>
             </div>
           </div>
 
@@ -661,8 +655,8 @@
               <img src="img/bg-img/wt6.jpg" alt="">
             </div>
             <div class="content-">
-              <h6>The Culture</h6>
-              <p>Pop Songs</p>
+              <h6>罗密欧与朱丽叶</h6>
+              <p>Romeo i Julia</p>
             </div>
           </div>
 
@@ -673,8 +667,8 @@
       <div class="col-12 col-lg-4">
         <div class="new-hits-area mb-100">
           <div class="section-heading text-left mb-50 wow fadeInUp" data-wow-delay="50ms">
-            <p>See what’s new</p>
-            <h2>New Hits</h2>
+            <p>常驻剧目</p>
+            <h2>国内剧目</h2>
           </div>
 
           <!-- Single Top Item -->
@@ -685,8 +679,8 @@
                 <img src="img/bg-img/wt7.jpg" alt="">
               </div>
               <div class="content-">
-                <h6>Sam Smith</h6>
-                <p>Underground</p>
+                <h6>舞台剧《繁花》第⼀季</h6>
+                <p>Blossoms Part1</p>
               </div>
             </div>
             <audio preload="auto" controls>
@@ -702,8 +696,8 @@
                 <img src="img/bg-img/wt8.jpg" alt="">
               </div>
               <div class="content-">
-                <h6>Power Play</h6>
-                <p>In my mind</p>
+                <h6>枪，谎言和玫瑰</h6>
+                <p>The Suicide</p>
               </div>
             </div>
             <audio preload="auto" controls>
@@ -719,8 +713,8 @@
                 <img src="img/bg-img/wt9.jpg" alt="">
               </div>
               <div class="content-">
-                <h6>Cristinne Smith</h6>
-                <p>My Music</p>
+                <h6>鱼刺公主</h6>
+                <p>Princess Fishbone</p>
               </div>
             </div>
             <audio preload="auto" controls>
@@ -736,8 +730,8 @@
                 <img src="img/bg-img/wt10.jpg" alt="">
               </div>
               <div class="content-">
-                <h6>The Music Band</h6>
-                <p>Underground</p>
+                <h6>老舍五则</h6>
+                <p>Five Acts of Life for 2024</p>
               </div>
             </div>
             <audio preload="auto" controls>
@@ -753,8 +747,8 @@
                 <img src="img/bg-img/wt11.jpg" alt="">
               </div>
               <div class="content-">
-                <h6>Creative Lyrics</h6>
-                <p>Songs and stuff</p>
+                <h6>4.48</h6>
+                <p>4.48</p>
               </div>
             </div>
             <audio preload="auto" controls>
@@ -770,8 +764,8 @@
                 <img src="img/bg-img/wt12.jpg" alt="">
               </div>
               <div class="content-">
-                <h6>The Culture</h6>
-                <p>Pop Songs</p>
+                <h6>莎士比亚的女人们</h6>
+                <p>Shakespeare's Garden</p>
               </div>
             </div>
             <audio preload="auto" controls>
@@ -785,8 +779,8 @@
       <div class="col-12 col-lg-4">
         <div class="popular-artists-area mb-100">
           <div class="section-heading text-left mb-50 wow fadeInUp" data-wow-delay="50ms">
-            <p>See what’s new</p>
-            <h2>Popular Artist</h2>
+            <p>37度2朗读剧目</p>
+            <h2>环境戏剧朗读</h2>
           </div>
 
           <!-- Single Artist -->
@@ -795,7 +789,7 @@
               <img src="img/bg-img/pa1.jpg" alt="">
             </div>
             <div class="content-">
-              <p>Sam Smith</p>
+              <p>物理学家The Physicists</p>
             </div>
           </div>
 
@@ -805,7 +799,9 @@
               <img src="img/bg-img/pa2.jpg" alt="">
             </div>
             <div class="content-">
-              <p>William Parker</p>
+              <p>犀牛
+                Rhinoceros
+                </p>
             </div>
           </div>
 
@@ -815,7 +811,9 @@
               <img src="img/bg-img/pa3.jpg" alt="">
             </div>
             <div class="content-">
-              <p>Jessica Walsh</p>
+              <p>等待戈多
+                Waiting For Godot
+                </p>
             </div>
           </div>
 
@@ -825,7 +823,9 @@
               <img src="img/bg-img/pa4.jpg" alt="">
             </div>
             <div class="content-">
-              <p>Tha Stoves</p>
+              <p>钦差大臣
+                The Inspector General
+                </p>
             </div>
           </div>
 
@@ -835,7 +835,9 @@
               <img src="img/bg-img/pa5.jpg" alt="">
             </div>
             <div class="content-">
-              <p>DJ Ajay</p>
+              <p>雷雨
+                Thunderstorm
+                </p>
             </div>
           </div>
 
@@ -845,7 +847,9 @@
               <img src="img/bg-img/pa6.jpg" alt="">
             </div>
             <div class="content-">
-              <p>Radio Vibez</p>
+              <p>饥饿艺术家
+                The Hunger art
+                </p>
             </div>
           </div>
 
@@ -855,7 +859,9 @@
               <img src="img/bg-img/pa7.jpg" alt="">
             </div>
             <div class="content-">
-              <p>Music 4u</p>
+              <p>鸟
+                The Birds
+                </p>
             </div>
           </div>
 
@@ -924,7 +930,7 @@
   <div class="container">
     <div class="row d-flex flex-wrap align-items-center">
       <div class="col-12 col-md-6">
-        <a href="#"><img src="img/core-img/logo.png" alt=""></a>
+        <a href="#"><img src="img/core-img/logo.svg" alt=""></a>
         <p class="copywrite-text"><a href="#">
           <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
           Copyright &copy;<script>document.write(new Date().getFullYear())</script>
@@ -964,6 +970,9 @@
 <script src="js/active.js"></script>
 <script src="js/autoplay.js"></script>
 <script>
+  window.onload =function(){
+        document.getElementById("loginBtn").innerHTML = localStorage.getItem('UserLoginNameText')
+    }
 // 页面加载时执行
 window.addEventListener('load', function () {
 
