--- a/one-music-gh-pages/contact.html
+++ b/one-music-gh-pages/contact.html
@@ -250,4 +250,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 </body>
 
+<script>
+    window.onload =function(){
+        document.getElementById("loginBtn").innerHTML = localStorage.getItem('UserLoginNameText')
+    }
+</script>
+
 </html>
